# loki-network

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  module.modulemap  readme.md  readme_es.md  run-worktipsnet.bat  worktipsnet-bootstrap  worktipsnet-docker.ini
.github/ISSUE_TEMPLATE/: bug_report.md
android/: AndroidManifest.xml  build.gradle  build.xml  settings.gradle
cmake/: GenVersion.cmake  basic_definitions.cmake  shadow.cmake
contrib/apparmor/: usr.bin.worktipsnet
contrib/bootserv/: .gitignore  makefile  readme.md
contrib/bootstrap/: readme.txt
contrib/cluster-shell/: clear-nodedbs.sh  init.sh  makenode.sh  start.sh  stop.sh
daemon/: CMakeLists.txt  main.cpp  worktipsnetctl.cpp
debian/: changelog  control  copyright  postinst  worktips-service-nodes.7  worktipsnet-bootstrap.1  worktipsnet.1  worktipsnet.install  worktipsnet.manpages  worktipsnet.service
docker/: router.Dockerfile  worktips-svc-kubernetes.Dockerfile
docs/: README  api_v0.txt  high-level.txt  proto_v0.txt  worktipsnet_admin_v0.txt
include/: llarp.h
jni/: CMakeLists.txt  network_worktips_worktipsnet_WorktipsnetConfig.h  network_worktips_worktipsnet_WorktipsnetDaemon.h  network_worktips_worktipsnet_Worktipsnet_JNI.h  network_worktips_worktipsnet_worktipsnetVPN.h  network_worktips_worktipsnet_worktipsnetVPN_VPNInfo.h  worktipsnet_config.cpp  worktipsnet_daemon.cpp  worktipsnet_jni_common.hpp  worktipsnet_jni_vpnio.hpp  worktipsnet_vpn.cpp
libabyss/: main.cpp
llarp/: CMakeLists.txt  context.cpp  testnet.c
osx-setup/: distribution.xml  make-release.sh
ui-ios/: CMakeLists.txt
ui-ios/lokinet/: AppDelegate.swift  CMakeLists.txt  ViewController.swift
ui-ios/lokinet/lokinet.xcdatamodeld/: .xccurrentversion  desktop.ini
ui-ios/lokinet/lokinet.xcdatamodeld/lokinet.xcdatamodel/: desktop.ini
ui-macos/: WindowsManager.swift
ui-win32/: AboutBox.Designer.cs  AboutBox.cs  App.config  LogDumper.cs  Program.cs  Settings.cs  UIMain.Designer.cs  UIMain.cs  UserSettings.Designer.cs  UserSettings.cs  VisualSettings.Designer.cs  VisualSettings.cs  dlgBootstrap.Designer.cs  dlgBootstrap.cs  dlgBootstrap.resx  worktipsvpn.csproj  worktipsvpn.sln
win32-setup/: Makefile  notes.txt  regdb_helper.c  worktipsnet-win32.iss
(+119 files in other folders)
